tests/integration/fail/arrays/stdlib_first_non_array_arg.ncl
# test.type = 'error'
# 
# [test.metadata]
# error = 'EvalError::BlameError'
std.array.first false
